; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_lirc_dev.c_lirc_get_pdata.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_lirc_dev.c_lirc_get_pdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irctl = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i8* }
%struct.file = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }

@irctls = common dso_local global %struct.irctl** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lirc_get_pdata(%struct.file* %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.irctl*, align 8
  store %struct.file* %0, %struct.file** %2, align 8
  store i8* null, i8** %3, align 8
  %5 = load %struct.file*, %struct.file** %2, align 8
  %6 = icmp ne %struct.file* %5, null
  br i1 %6, label %7, label %42

7:                                                ; preds = %1
  %8 = load %struct.file*, %struct.file** %2, align 8
  %9 = getelementptr inbounds %struct.file, %struct.file* %8, i32 0, i32 0
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %11 = icmp ne %struct.TYPE_5__* %10, null
  br i1 %11, label %12, label %42

12:                                               ; preds = %7
  %13 = load %struct.file*, %struct.file** %2, align 8
  %14 = getelementptr inbounds %struct.file, %struct.file* %13, i32 0, i32 0
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %16, align 8
  %18 = icmp ne %struct.TYPE_6__* %17, null
  br i1 %18, label %19, label %42

19:                                               ; preds = %12
  %20 = load %struct.file*, %struct.file** %2, align 8
  %21 = getelementptr inbounds %struct.file, %struct.file* %20, i32 0, i32 0
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %42

28:                                               ; preds = %19
  %29 = load %struct.irctl**, %struct.irctl*** @irctls, align 8
  %30 = load %struct.file*, %struct.file** %2, align 8
  %31 = getelementptr inbounds %struct.file, %struct.file* %30, i32 0, i32 0
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %33, align 8
  %35 = call i64 @iminor(%struct.TYPE_6__* %34)
  %36 = getelementptr inbounds %struct.irctl*, %struct.irctl** %29, i64 %35
  %37 = load %struct.irctl*, %struct.irctl** %36, align 8
  store %struct.irctl* %37, %struct.irctl** %4, align 8
  %38 = load %struct.irctl*, %struct.irctl** %4, align 8
  %39 = getelementptr inbounds %struct.irctl, %struct.irctl* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i8*, i8** %40, align 8
  store i8* %41, i8** %3, align 8
  br label %42

42:                                               ; preds = %28, %19, %12, %7, %1
  %43 = load i8*, i8** %3, align 8
  ret i8* %43
}

declare dso_local i64 @iminor(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
